# fastapi-serverless-cookiecutter

./: .gitignore  404.html  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  regen_example.sh  sitemap.xml
docs/: README.md  hyperlinks.md  next_steps.md
docs/what_you_get/: pyproject.md  top_level.md
docs/what_you_get/pyproject/: black.md  cli.md  coverage.md  dependencies.md  dev_dependencies.md  isort.md  private_pypi.md  taskipy.md
example/: README.md  alembic.ini  cli.py  generate_angular_client.sh  generator-config.yml  mypy.ini  package.json  pyproject.toml  sample-config.yml  serverless.yml
example/.circleci/: config.yml
example/example/: __init__.py  config.py  database.py  main.py
example/example/routers/: default.py
example/migrations/: env.py  script.py.mako
example/tests/: conftest.py  test_config.py  test_database.py
example/tests/test_routers/: test_default.py
hyperlinks/: index.html
next_steps/: index.html
search/: search_index.json
what_you_get/pyproject/: index.html
what_you_get/pyproject/black/: index.html
what_you_get/pyproject/cli/: index.html
what_you_get/pyproject/coverage/: index.html
what_you_get/pyproject/dependencies/: index.html
what_you_get/pyproject/dev_dependencies/: index.html
what_you_get/pyproject/isort/: index.html
what_you_get/pyproject/private_pypi/: index.html
what_you_get/pyproject/taskipy/: index.html
what_you_get/top_level/: index.html
{{ cookiecutter.package_name }}/: .gitignore  README.md  cli.py  generate_angular_client.sh  generator-config.yml  mypy.ini  package.json  pyproject.toml  sample-config.yml  serverless.yml
{{ cookiecutter.package_name }}/.circleci/: config.yml
{{ cookiecutter.package_name }}/migrations/: env.py  script.py.mako
{{ cookiecutter.package_name }}/tests/: conftest.py  model_fixtures.py  test_config.py  test_config.yml  test_database.py
{{ cookiecutter.package_name }}/tests/test_routers/: test_default.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: __init__.py  config.py  database.py  main.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/routers/: __init__.py  default.py
