[tool.poetry]
name = "fastapi-serverless-cookiecutter"
version = "0.1.0"
description = "For generating FastAPI projects to be hosted on AWS Lambda using the Serverless framework."
authors = ["Dylan Anthony <danthony@triaxtec.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1"
mkdocs-material = "^5.1.5"
markdown-include = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
